# kleiber_dynamics

./: CMakeLists.txt
quadcopter/: CMakeLists.txt
quadcopter/include/quadcopter/: dynamics.h  parameters.h
quadcopter/src/: dynamics.cpp
